<resources>
    <string name="app_name">MemoDiary</string>
    <string name="title_all_memory">All Memory</string>
    <string name="title_favourite_memory">Favourite</string>
    <string name="title_random_memory">Random Memory</string>
    <string name="splash_screen_first_half">Memo</string>
    <string name="splash_screen_second_half">Diary</string>
    <string name="add_dish">Add Dish</string>
    <string name="lbl_memory_title">Title</string>
    <string name="lbl_memory_type">Type</string>
    <string name="lbl_people_involved">People involved</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="add_new_memory">Add Memory</string>
    <string name="txt_dialogue_image_selection">Choose image from</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="title_select_memory_type">Select Memory Type</string>
    <string name="title_select_people_involved">Select People Involved</string>
    <string name="err_msg_image_not_selected">Please select an image.</string>
    <string name="err_msg_title_not_entered">Please enter a title.</string>
    <string name="err_msg_type_not_selected">Please select a type of memory</string>
    <string name="err_msg_people_not_selected">Please select the person involved</string>
    <string name="err_msg_date_not_selected">Please select a date</string>
    <string name="err_msg_time_not_selected">Please select a time.</string>
    <string name="err_msg_description_not_selected">Please enter some description.</string>
    <string name="lbl_tv_no_memory_added_yet">No memories added yet.</string>
    <string name="image_memory_contentDesc">Memory image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiile_memory_details">Memory Details</string>
    <string name="approximate_diary_entry_time">This diary entry was created on %1$s of the following date.</string>
    <string name="people_involved">People involved</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="tv_date_lbl">Date</string>
    <string name="feeling">Feeling</string>
    <string name="msg_added_to_favourites">You have added the memory to your favourites.</string>
    <string name="msg_removed_from_favourites">You have removed the memory from your favourites.</string>
    <string name="lbl_tv_no_fav_memory_added_yet">You have not marked any memory as FAVOURITE.</string>
    <string name="more_option_contentDesc">More options</string>
    <string name="action_edit_memory">Edit Memory</string>
    <string name="action_delete_memory">Delete Memory</string>
    <string name="title_edit_memory">Edit Memory</string>
    <string name="title_add_memory">Add Memory</string>
    <string name="update_memory">Update Memory</string>
    <string name="msg_delete_memory">Are you sure you want to delete %1$s</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="title_delete_memory">Delete memory</string>
    <string name="action_filter_memory">Filter Memories</string>
    <string name="title_select_item_to_filter">Select memory to filter.</string>
    <string name="action_share_memory">Share Memory</string>
    <string name="notification_title">Check out new memory</string>
    <string name="notification_subtitle">Tap for more details</string>
    <string name="loading_meme"><![CDATA[Please Wait&#8230;]]></string>
</resources>