<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_memory">

    <fragment
        android:id="@+id/navigation_all_memory"
        android:name="com.example.memodiary.views.fragments.AllMemoryFragment"
        android:label="@string/title_all_memory"
        tools:layout="@layout/fragment_all_memory" />

    <fragment
        android:id="@+id/navigation_favourite_memory"
        android:name="com.example.memodiary.views.fragments.FavouriteMemoryFragment"
        android:label="@string/title_favourite_memory"
        tools:layout="@layout/fragment_favourite_memory" />

    <fragment
        android:id="@+id/navigation_random_memory"
        android:name="com.example.memodiary.views.fragments.RandomMemoryFragment"
        android:label="@string/title_random_memory"
        tools:layout="@layout/fragment_random_memory" />
</navigation>